<resources>
    <string name="app_name">Car Vault</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_google">Google</string>
    <string name="cant_login">Can\'t login? Find help here.</string>
    <string name="register">Don\'t have an account?.</string>

    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="title_activity_register">Register</string>
    <string name="nav_header_title">Car Vault </string>
    <string name="nav_header_subtitle">notcarchain@carvault.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>

    <string name="profileName">%s %s</string>
    <string name="user_username">Username: %s</string>
    <string name="user_email">Email: %s</string>
    <string name="user_phone">Phone: %s</string>

    <string name="mock_name">Car vault</string>
    <string name="VINNotFound">No vehicle found with VIN %s</string>
    <string name="UsernameNotFound">No user found with username %s</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_search">Search vehicles</string>
    <string name="menu_transfer">Transfer vehicles</string>

    <string name="car_not_found">Car not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_vehicle_basic_info">Vehicle basic info</string>
    <string name="carBrand">Brand</string>
    <string name="carVIN">VIN</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="ManufacturedYear">Manufactured year</string>
    <string name="Model">Model</string>
    <string name="origin">Origin</string>
    <string name="carAddress">Address</string>
    <string name="horsepower">Horsepower</string>
    <string name="kms">KMs</string>
    <string name="fuel">Fuel</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="cancel_button">CANCEL</string>
    <string name="add_vehicle_button">ADD VEHICLE</string>
    <string name="documentation">Documentation</string>
    <string name="photos">Photos</string>

    <string name="prefs_file">com.app.carvault.PREFERENCE_FILE_KEY</string>

    <string name="auth_email_error">Email or password wrong!</string>
    <string name="auth_google_error">Something went wrong with your Google account...</string>

    <string name="vin_hint">Vin</string>
    <string name="brand_hint">Brand</string>
    <string name="model_hint">Model</string>

    <string name="vin_hint_asterisk">Vin*</string>
    <string name="brand_hint_asterisk">Brand*</string>
    <string name="model_hint_asterisk">Model*</string>

    <string name="toast_mandatory">Please, introduce mandatory fields.</string>
    <string name="title_activity_update_car">UpdateCarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="selected_car">Selected: %s</string>
    <string name="transfer_confirm">Are you sure you want to transfer vehicle %s to %s %s? </string>



</resources>