<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".car.addCar.AddCarActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="4dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabVehicleInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_vehicle_basic_info" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabDocumentation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/documentation" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabPhotos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/photos" />

    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/addCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="18dp"
        android:background="#F44336"
        android:text="@string/cancel_button"
        android:textColor="#000000"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addVehicleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="18dp"
        android:background="#4CAF50"
        android:text="@string/add_vehicle_button"
        android:textColor="#263238"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/add_vehicle_basic_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/add_vehicle_basic_info" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/addCarBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/carBrand" />

                    <TextView
                        android:id="@+id/addCarModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/Model" />

                    <TextView
                        android:id="@+id/addCarVin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/carVIN" />

                    <TextView
                        android:id="@+id/addCarManufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/manufacturer" />

                    <TextView
                        android:id="@+id/addCarManufacturedYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/ManufacturedYear" />

                    <TextView
                        android:id="@+id/addCarOrigin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/origin" />

                    <TextView
                        android:id="@+id/addCarAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/carAddress" />

                    <TextView
                        android:id="@+id/addCarKMS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/kms" />

                    <TextView
                        android:id="@+id/addCarFuel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/fuel" />

                    <TextView
                        android:id="@+id/addCarColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/color" />

                    <TextView
                        android:id="@+id/addCarDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/description" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/addCarName_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Name"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarModel_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Model"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarVin_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="VIN"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarManufacturer_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Manufacturer"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarManufacturedYear_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Manufactured Year"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarOrigin_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Origin"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarAddress_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Address"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarKMS_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="KMs"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarFuel_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Fuel"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarColor_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Color"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/addCarDescription_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Description"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>