<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".car.editCar.EditCarTabVehicleDataFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/add_vehicle_basic_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:text="@string/add_vehicle_basic_info" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/brandLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/carBrand" />

                    <TextView
                        android:id="@+id/modelLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/Model" />

                    <TextView
                        android:id="@+id/vinLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/carVIN" />

                    <TextView
                        android:id="@+id/addCarManufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/manufacturer" />

                    <TextView
                        android:id="@+id/addCarManufacturedYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/ManufacturedYear" />

                    <TextView
                        android:id="@+id/addCarOrigin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/origin" />

                    <TextView
                        android:id="@+id/addCarAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/carAddress" />

                    <TextView
                        android:id="@+id/addCarKMS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/kms" />

                    <TextView
                        android:id="@+id/addCarHorsepower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/horsepower" />

                    <TextView
                        android:id="@+id/addCarFuel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/fuel" />

                    <TextView
                        android:id="@+id/addCarColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/color" />

                    <TextView
                        android:id="@+id/addCarDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/description" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/brand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Name"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Model"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/vin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="VIN"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/manufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Manufacturer"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Manufactured Year"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/origin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Origin"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Address"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/kms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="KMs"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/horsepower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="CVs"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/fuel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Fuel"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Color"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Description"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>